--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <html>
 
     <body>    
-    	<title>Login Page</title>
-    	<link rel="stylesheet" type="text/css" href="/css/main.css">		
-       	<ul>
-	        <li><p>Add</p></li>
-	        <li><p>Edit</p></li>
-	        <li><p>Delete</p></li>
-	        <li><p>Search</p></li>
-	        <li><p>Log Out</p></li>
-
-        </ul>
- 
+        <title>Login Page</title>
+        <link rel="stylesheet" type="text/css" href="/css/main.css">        
+        <p>
+            Αυτή είναι η κεντρική σελίδα του Συλλόγου Μεγάλης Γέφυρας Εστία!
+        </p>
 
     </body>
 
