--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <html>
-
+  <meta charset="UTF-8">
     <body>    
-        <title>Login Page</title>
-        <link rel="stylesheet" type="text/css" href="/css/main.css">        
-        <p>
-            Αυτή είναι η κεντρική σελίδα του Συλλόγου Μεγάλης Γέφυρας Εστία!
+    	<title>Login Page</title>
+    	<link rel="stylesheet" type="text/css" href="/css/main.css">		
+   
+        <p name="title">
+        	Πολιτιστικός Σύλλογος Μεγάλης Γέφυρας
         </p>
-
+        <div name="side">
+        	
+        </div>
+        	
     </body>
 
 </html>
