--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <html>
-  <meta charset="UTF-8">
-    <body>    
-    	<title>Login Page</title>
-    	<link rel="stylesheet" type="text/css" href="/css/main.css">		
-   
-		<audio controls autoplay name="audio">
-		  <source src="https://www.youtube.com/watch?v=i-rN_ily7oY" type="audio/mpeg">
+<meta charset="UTF-8">
+<body>    
+	<title>Login Page</title>
+	<link rel="stylesheet" type="text/css" href="/css/main.css">		
+	
+	<audio controls autoplay name="audio">
+		<source src="../css/audio.mp3" type="audio/mpeg">
 		</audio> 
-        
-        <div name="side"></div>
-        <p name="title">
-        	Πολιτιστικός Σύλλογος Μεγάλης Γέφυρας
-        </p>
-        <p name="title2">
-        	<<Εστία>>
-        </p>
-        	
-    </body>
+		
+		<div name="side">
+			
+			<ul>
+				<li><a href="news.php">Νέα</a></li>
+				<li><a href="fests.php">Εκδηλώσεις</a></li>
+				<li><a href="info.php">Πληροφορίες</a></li>
+			</ul>
 
-</html>
+		</div>
+		<p name="title">
+			Πολιτιστικός Σύλλογος Μεγάλης Γέφυρας
+		</p>
+		<p name="title2">
+			<<Εστία>>
+		</p>
+
+
+		
+	</body>
+
+	</html>
