--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 			Πολιτιστικός Σύλλογος Μεγάλης Γέφυρας
 		</p>
 		<p name="title2">
-			<<Εστία>>
+			<<Εστία>> HI
 		</p>
-		<p name="title2">
-			Hi
-		</p>
+		
 
 
 		
