--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/main.css">		
 	
 	<audio controls autoplay name="audio">
-		<source src="../css/audio.mp3" type="audio/mpeg">
+		<source src="css/audio.mp3" type="audio/mpeg">
 		</audio> 
 		
 		<div name="side">
